Creating a base CSGO docker image with the game installed to avoid having to re-download on every build.

--- a/buster/Dockerfile
+++ b/buster/Dockerfile
@@ -3,7 +3,7 @@
 ###########################################################
 FROM cm2network/steamcmd:root
 
-LABEL maintainer="walentinlamonos@gmail.com"
+LABEL maintainer="personal.godsonduma@gmail.com"
 
 ENV STEAMAPPID 740
 ENV STEAMAPPDIR /home/steam/csgo-dedicated
@@ -18,7 +18,9 @@ RUN set -x \
 		ca-certificates=20190110 \
 	&& mkdir -p ${STEAMAPPDIR}/csgo \
 	&& cd ${STEAMAPPDIR} \
-	&& wget https://raw.githubusercontent.com/CM2Walki/CSGO/master/etc/entry.sh \
+	&& wget https://raw.githubusercontent.com/NkosenhleDuma/CSGO/development/etc/get-csgo.sh \
+    && chmod 755 ${STEAMAPPDIR}/get-csgo.sh \
+	&& wget https://raw.githubusercontent.com/NkosenhleDuma/CSGO/development89/etc/entry.sh \
 	&& chmod 755 ${STEAMAPPDIR}/entry.sh \
 	&& cd ${STEAMAPPDIR}/csgo \
 	&& { \
@@ -57,6 +59,8 @@ USER steam
 WORKDIR $STEAMAPPDIR
 
 VOLUME $STEAMAPPDIR
+
+RUN ${STEAMAPPDIR}/get-csgo.sh
 
 ENTRYPOINT ${STEAMAPPDIR}/entry.sh
 
